--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,21 @@ spring.cloud.aws.region.static=us-east-2
 spring.cloud.aws.s3.bucket=minjoon-bucket-1
 spring.config.import=aws-parameterstore:/instagram/
 
+# --- rabbitMq ---
+spring.rabbitmq.host=${rabbitmq.host}
+spring.rabbitmq.username=${rabbitmq.username}
+spring.rabbitmq.password=${rabbitmq.password}
+spring.rabbitmq.virtual-host=${rabbitmq.vhost}
+spring.rabbitmq.port.stomp=${rabbitmq.port.stomp}
+
 # --- database ---
 spring.datasource.url=${db.mysql.url}
 spring.datasource.username=${db.mysql.username}
 spring.datasource.password=${db.mysql.password}
+
+# --- redis ---
+spring.redis.host=${redis.host}
+spring.redis.port=${redis.port}
 
 # --- Google OAuth ---
 google-oauth-client-id=${oauth.google.access.key}
@@ -29,7 +40,13 @@ spring.mail.default.encoding=UTF-8
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.stat=debug
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+logging.level.org.springframework.messaging.simp.stomp=DEBUG
+logging.level.org.springframework.messaging.simp.broker=DEBUG
+logging.level.reactor.netty=DEBUG   
+
+logging.level.org.springframework.messaging=DEBUG
+logging.level.org.springframework.web.socket=DEBUG  
+logging.level.org.springframework.web.socket.messaging=DEBUG
+
+logging.level.org.springframework.web.socket.handler.LoggingWebSocketHandlerDecorator=DEBUG
+logging.level.org.springframework.web.socket.server.support.Abstract
