--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,4 @@ logging.level.org.springframework.web.socket.messaging=DEBUG
 
 logging.level.org.springframework.web.socket.handler.LoggingWebSocketHandlerDecorator=DEBUG
 logging.level.org.springframework.web.socket.server.support.Abstract
+logging.level.io.awspring.cloud.paramstore.AwsParamStorePropertySource=DEBUG
