--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.cloud.aws.region.static=us-east-2
 spring.cloud.aws.s3.bucket=minjoon-bucket-1
 spring.config.import=aws-parameterstore:/instagram/
 
+# --- REST API front-end URL ---
+cors.front-end.url=${cors.front-end.url}
+
 # --- rabbitMq ---
 spring.rabbitmq.host=${rabbitmq.host}
 spring.rabbitmq.username=${rabbitmq.username}
@@ -37,6 +40,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.transport.protocol=smtp
 spring.mail.default.encoding=UTF-8
 
+
+# --- File upload size ---
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
