--- a/nginx.conf
+++ b/nginx.conf
@@ -6,22 +6,38 @@ events {
 
 
 http {
+    log_format custom_combined '$remote_addr - $remote_user [$time_local] '
+                               '"$request" $status $body_bytes_sent '
+                               '"$http_referer" "$http_user_agent" '
+                               '[UPSTREAM: $upstream_addr]';
     include       mime.types;
     default_type  application/octet-stream;
 
-    client_max_body_size 20M;
+    client_max_body_size 50M;
 
     upstream backend {
         server spring-instance-1:8080;
-        server spring-instance-2:8080;
+        #server spring-instance-2:8080;
+    }
+
+    upstream backend-ws {
+        ip_hash;
+        server spring-instance-1:8080;
+        #server spring-instance-2:8080;
     }
 
     server {
         listen       8080;
         server_name  localhost;
+        
+        access_log /var/log/nginx/access.log custom_combined;
 
-        location / {
+        location /api {
             proxy_pass http://backend;
+        }
+
+        location /ws {
+            proxy_pass http://backend-ws;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
