Enable Redis-based centralized Websocket session management for multi-server env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.datasource.password=${db.mysql.password}
 # --- redis ---
 spring.redis.host=${redis.host}
 spring.redis.port=${redis.port}
+spring.session.store-type=redis
 
 # --- Google OAuth ---
 google-oauth-client-id=${oauth.google.access.key}
@@ -56,3 +57,6 @@ logging.level.org.springframework.web.socket.messaging=DEBUG
 logging.level.org.springframework.web.socket.handler.LoggingWebSocketHandlerDecorator=DEBUG
 logging.level.org.springframework.web.socket.server.support.Abstract
 logging.level.io.awspring.cloud.paramstore.AwsParamStorePropertySource=DEBUG
+
+
+spring.main.allow-bean-definition-overriding: true
