Add Google Vision analysis for post profile images and update user_interest logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,9 @@ spring.session.store-type=redis
 google-oauth-client-id=${oauth.google.access.key}
 google-oauth-client-secret=${oauth.google.secret.key}
 
+# --- Google Service account ---
+google.service-account-key=${google/service-account-key}
+
 # --- Mail ---
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -41,22 +44,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.transport.protocol=smtp
 spring.mail.default.encoding=UTF-8
 
-
 # --- File upload size ---
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
-logging.level.org.springframework.messaging.simp.stomp=DEBUG
-logging.level.org.springframework.messaging.simp.broker=DEBUG
-logging.level.reactor.netty=DEBUG   
-
-logging.level.org.springframework.messaging=DEBUG
-logging.level.org.springframework.web.socket=DEBUG  
-logging.level.org.springframework.web.socket.messaging=DEBUG
-
-logging.level.org.springframework.web.socket.handler.LoggingWebSocketHandlerDecorator=DEBUG
-logging.level.org.springframework.web.socket.server.support.Abstract
-logging.level.io.awspring.cloud.paramstore.AwsParamStorePropertySource=DEBUG
-
 
 spring.main.allow-bean-definition-overriding: true
