--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation platform('software.amazon.awssdk:bom:2.25.0')
     implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.1.0')
     implementation platform('io.projectreactor:reactor-bom:2024.0.4')
+    implementation platform("com.google.cloud:libraries-bom:26.40.0")
+    implementation "com.google.cloud:google-cloud-vision"
     
     implementation 'io.projectreactor.netty:reactor-netty-core'
     implementation 'io.projectreactor.netty:reactor-netty-http'
@@ -43,9 +45,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.hibernate.validator:hibernate-validator'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    
+    implementation 'net.javacrumbs.shedlock:shedlock-spring:7.2.1'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
@@ -57,6 +61,7 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    
 }
 
 tasks.named('test') {
