Refactory post comment API logic and update relate endpoints

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
 
     upstream backend {
         server spring-instance-1:8080;
-        server spring-instance-2:8080;
+        #server spring-instance-2:8080;
     }
 
     server {
