update UserDetails delete code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=springboot
 server.port=8080
+server.forward-headers-strategy=native
 
 # --- AWS S3 ---
 spring.cloud.aws.region.static=us-east-2
